@@ -2,7 +2,10 @@ bobcat (2.07.00)    ISN
 
   * FBB::insertable and FBB::throwable are no longer required when using Errno
   * The gptr() < egptr() checks in underflow() functions (IFdStreambuf and
-    Randbuffer) are superfluous and have been removed
+    Randbuffer) are superfluous and have been removed.
+  * DateTime's man-page contains a caveat for setMonth
+  * Fswap's man-page BUGS section is augmented with a warning against swapping
+    streams.
 
 bobcat (2.06.00)
 
